# rust-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: arduino.rs  handler.rs  main.rs  model.rs  service.rs
src/handler/: dht.rs  health.rs  hum.rs  led.rs  msg.rs  temp.rs
src/model/: dht_measurement.rs  error.rs  health.rs  led.rs  msg.rs  response.rs
src/service/: arduino.rs  scheduler.rs  sql.rs
src/service/arduino/: actions.rs
