[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.3"
tokio-cron-scheduler = "0.7.2"
dotenv = "0.15.0"
tower = "0.4"
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.27", features = ["chrono"] }
chrono = "0.4"